# horogo

./: .env.example  .gitignore  README.md  go.mod  go.sum  main.py  pyproject.toml
api/: app.py
cmd/: main.go
internal/: ask.go  geo.go  jpl.go  ollama.go  person.go  planet.go
