[project]
name = "horogo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.128.8",
    "python-dotenv>=1.2.1",
    "transformers>=5.9.0",
    "torch>=2.6.0",
    "uvicorn>=0.39.0",
    "accelerate>=1.0.0",
    "hf-transfer>=0.1.8",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

